fix: Adjust margin for evolution chain and stats sections for better spacing

--- a/src/app/pages/pokemon-details/pokemon-details.css
+++ b/src/app/pages/pokemon-details/pokemon-details.css
@@ -50,7 +50,7 @@
 app-pokemon-details-evolution-chain, 
 app-pokemon-details-stats, 
 app-pokemon-details-weaknesses {
-  margin-top: 5vh;
+  margin-top: 2.5vh;
 }
 
 @media (min-width: 900px) {
